# load-balancer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.json  load_balancer_spec.md  start_backends.sh  status_backends.sh  stop_backends.sh
include/: backend_manager.hpp  config_loader.hpp  health_checker.hpp  logger.hpp  request_router.hpp  response_injector.hpp  routing_policy.hpp
src/: backend_manager.cpp  backend_server.cpp  config_loader.cpp  health_checker.cpp  logger.cpp  main.cpp  response_injector.cpp
tests/: test_backend_manager.cpp  test_config_loader.cpp  test_response_injector.cpp  test_routing_policy.cpp
